Updates to function descriptions (2).

--- a/notebooks/SIR-mean_field.ipynb
+++ b/notebooks/SIR-mean_field.ipynb
@@ -205,7 +205,7 @@
     "##################################################################################################\n",
     "\n",
     "def draw_next_event_direct(lambda_inf, lambda_rec):\n",
-    "    '''Input: total infection and recovery rates, a_inf=S*I*beta_k and a_rec=I*mu, respectively.\n",
+    "    '''Input: total infection and recovery rates, lambda_inf=S*I*beta_k and lambda_rec=I*mu, respectively.\n",
     "    Output: selected reaction channel, i_selected, and the waiting time until the event, tau.'''\n",
     "\n",
     "    # Calculate cumulative rate:\n",
